# LeetCode

./: .gitignore  fizz-buzz.py  pyproject.toml
easy/: add-two-integers.py  middle-of-the-linked-list.py  number-of-steps-to-reduce-amount.py  ransom-note.py  running-sum.py
